--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
     "react-icons": "^3.10.0",
+    "react-markdown": "^4.3.1",
+    "react-mde": "^10.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-table": "^7.2.1",
-    "react-virtualized": "^9.21.2",
+    "react-tag-autocomplete": "^6.0.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "showdown": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
