--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-hook-form": "^5.7.2",
     "react-icons": "^3.10.0",
     "react-markdown": "^4.3.1",
