--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "material-table": "^1.64.0",
+    "moment-timezone": "^0.5.31",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
@@ -23,8 +24,10 @@
     "react-icons": "^3.10.0",
     "react-markdown": "^4.3.1",
     "react-mde": "^10.1.0",
+    "react-moment": "^0.9.7",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-stomp": "^5.0.0",
