--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "3.4.1",
     "react-stomp": "^5.0.0",
     "react-table": "^7.2.1",
+    "react-tagcloud": "^2.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "showdown": "^1.9.1"
